---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2023-04-13
  Changes:
    - Added Intermodal Containers to the list of supported mods
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2022-10-06
  Changes:
    - Updated transport belt icons to the latest version from Factorio
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2022-04-03
  Locale:
    - Added partial localization for Italian
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2022-03-19
  Locale:
    - Added localization for Ukrainian
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2022-01-03
  Changes:
    - Marked incompatible with Bob's Mods: Alternate Textures
    - Adjusted entity functions `chemical_plant` and `oil_refinery` to support custom tints and tier label behaviors
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2022-01-03
  Features:
    - Added setting "Reskin interface" which supports visual changes and updates to the crafting tabs
    - Pipes have been adjusted to have separate shadow layers, eliminating the shadow overlay with other entities when placing pipes
    - Additions of EmmyLua-style documentation is ongoing
  Changes:
    - Moved reskinning of the standard Factorio pipe into this mod from Artisanal Reskins: Angel's mods
    - Internal restructuring to make entity reskinning through functions globally available under `reskins.lib.apply_skin` is ongoing
  Bugfixes: