@@ -114,7 +114,7 @@ function reskins.lib.apply_skin.transport_belt(name, tier, tint, make_tier_label
     if not entity then return end
 
     if reskin_vanilla_entity == false then
-        reskins.lib.append_tier_labels_to_vanilla_icon(name, tier, inputs)
+        reskins.lib.add_tier_labels_to_entity(name, inputs.type, tier)
         return
     end
 
